<resources>
    <string name="app_name">NT_CollectData</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- ชุดข้อมูลคำนำหน้า -->
    <string-array name="TitleName">
        <item>นาย</item>
        <item>นาง</item>
        <item>นางสาว</item>

    </string-array>

    <!-- ชุดข้อมูลความสัมพันธ์ -->
    <string-array name="Relationship">
        <item>พ่อ</item>
        <item>แม่</item>
        <item>พี่สาว</item>
        <item>พี่ชาย</item>
        <item>น้องสาว</item>
        <item>น้องชาย</item>
        <item>ลูก</item>
        <item>ลุง</item>
        <item>ป้า</item>
        <item>ลูปพี่ลูกน้อง</item>

    </string-array>

    <!-- LogIn -->
    <string name="SignIn">เข้าสู่ระบบ</string>
    <string name="Register">ลงทะเบียน</string>

    <!-- Menu -->
    <string name="AddUser">เพิ่ม/แก้ไขข้อมูล</string>
    <string name="History">ประวัติการเก็บข้อมููล</string>
    <string name="LogOut">ออกจากระบบ</string>

    <!-- Location -->
    <string name="HouseNumber">บ้านเลขที่</string>
    <string name="Building">หมู่บ้าน/อาคาร</string>
    <string name="Room">เลขที่ห้อง</string>
    <string name="Floor">ชั้น</string>
    <string name="Moo">หมู่ที่</string>
    <string name="Soi">ตรอก/ซอย</string>
    <string name="Road">ถนน</string>
    <string name="Tambon">ตำบล</string>
    <string name="Amphur">อำเภอ</string>
    <string name="Province">จังหวัด</string>
    <string name="PostCode">รหัสไปรษณีย์</string>



    <!-- Disease -->
    <string name="None_Disease">None</string>
    <string name="Lower_extremity_amputation">Lower extremity amputation</string>
    <string name="Neurological_disorders">Neurological disorders</string>
    <string name="Neurological_disorders_description">(Diabetes mellitus, Stroke, Parkinson’s disease)</string>
    <string name="Peripheral_vascular_disease">Peripheral vascular disease</string>
    <string name="Inflammatory_joint_disease">Inflammatory joint disease</string>
    <string name="Inflammatory_joint_disease_description">(Osteoarthritis, Rheumatoid arthritis, Gouty arthritis)</string>
    <string name="Plantar_ulcers">Plantar ulcers</string>
    <string name="Previous_foot_surgery">Previous foot surgery</string>
    <string name="Other_Disease">Other</string>
    <!-- Disorder -->
    <string name="None_Disorder">None</string>
    <string name="Hallux_valgus">Hallux valgus</string>
    <string name="Claw_hammer_toe">Claw toes/hammer toe </string>
    <string name="Tailors_bunion">Tailor’s bunion </string>
    <string name="Metatarsalgia">Metatarsalgia</string>
    <string name="Nail_deformity">Nail deformity</string>
    <string name="Flat_feet">Flat feet </string>
    <string name="Cavus_feet">Cavus feet</string>
    <string name="Foot_pain">Foot pain</string>
    <string name="Plantar_fasciitis">Plantar_fasciitis</string>
    <string name="Leg_length_discrepancy">Leg length discrepancy</string>
    <string name="Other_Disorder">Other</string>

    <!-- Photos -->
    <string name="TakePic">ถ่ายรูป</string>
    <string name="Pic1">รุปที่ 1</string>
    <string name="Pic2">รุปที่ 2</string>
    <string name="Pic3">รุปที่ 3</string>
    <string name="Pic4">รุปที่ 4</string>
    <string name="Pic5">รุปที่ 5</string>
    <string name="Pic6">รุปที่ 6</string>
    <string name="Pic7">รุปที่ 7</string>

</resources>
