<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <FrameLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#eeeeee"
        android:padding="16dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_head_step5"
                        android:layout_width="match_parent"
                        android:layout_height="57dp"

                        android:text="Foot Disorder"
                        android:textSize="30sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="64dp">

                    <CheckBox
                        android:id="@+id/checkBox11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/None_Disorder" />

                    <CheckBox
                        android:id="@+id/checkBox10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Hallux_valgus" />

                    <CheckBox
                        android:id="@+id/checkBox9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Claw_hammer_toe" />

                    <CheckBox
                        android:id="@+id/checkBox8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Tailors_bunion" />

                    <CheckBox
                        android:id="@+id/checkBox7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Metatarsalgia" />

                    <CheckBox
                        android:id="@+id/checkBox6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Nail_deformity" />

                    <CheckBox
                        android:id="@+id/checkBox5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Flat_feet" />

                    <CheckBox
                        android:id="@+id/checkBox4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Cavus_feet" />

                    <CheckBox
                        android:id="@+id/checkBox3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Foot_pain" />

                    <CheckBox
                        android:id="@+id/checkBox2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Leg_length_discrepancy" />

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Other_Disorder" />
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>

    </FrameLayout>

</ScrollView>