<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="64dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="64dp"
            android:text="ข้อมูลสำหรับผู้เข้าร่วมโครงการพัฒนาระบบเครือข่ายเพื่อผลิตรองเท้าเฉพาะบุคคลสำหรับผู้สูงอายุ"
            android:textAlignment="center"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="64dp">

            <Button
                android:id="@+id/BAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/AddUser" />

            <Button
                android:id="@+id/BHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/History" />

            <Button
                android:id="@+id/BLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/LogOut" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>