<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <FrameLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#eeeeee"
        android:padding="16dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_head_step4"
                        android:layout_width="match_parent"
                        android:layout_height="57dp"

                        android:text="Underlying Disease"
                        android:textSize="30sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="64dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView14"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="ส่วนสูง" />

                        <EditText
                            android:id="@+id/editText10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="ส่วนสูง"
                            android:inputType="number" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="เซนติเมตร" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView16"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="น้ำหนัก" />

                        <EditText
                            android:id="@+id/editText6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="น้ำหนัก"
                            android:inputType="numberDecimal" />

                        <TextView
                            android:id="@+id/textView15"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="กิโลกรัม" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView18"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="อัชนีมวลกาย" />

                        <EditText
                            android:id="@+id/editText7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="ดัชนีมวลกาย"
                            android:inputType="numberDecimal" />

                        <TextView
                            android:id="@+id/textView17"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="กิโลกรัม/เมตร^2" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_marginTop="24dp">

                        <CheckBox
                            android:id="@+id/checkBox8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/None_Disease" />

                        <CheckBox
                            android:id="@+id/checkBox7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Lower_extremity_amputation" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <CheckBox
                                android:id="@+id/checkBox6"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/Neurological_disorders" />

                            <TextView
                                android:id="@+id/textView19"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/Inflammatory_joint_disease_description" />
                        </LinearLayout>

                        <CheckBox
                            android:id="@+id/checkBox5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Peripheral_vascular_disease" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <CheckBox
                                android:id="@+id/checkBox4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/Inflammatory_joint_disease" />

                            <TextView
                                android:id="@+id/textView20"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/Inflammatory_joint_disease_description" />

                        </LinearLayout>

                        <CheckBox
                            android:id="@+id/checkBox3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Plantar_ulcers" />

                        <CheckBox
                            android:id="@+id/checkBox2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Previous_foot_surgery" />

                        <CheckBox
                            android:id="@+id/checkBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Other_Disease" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>

    </FrameLayout>

</ScrollView>